# digital-twin-master-thesis

./: .env.example  .gitignore  Makefile  README.md  bh1750.py  consumer.py  design.md  dht22.py  kafka_manager.py  main.py  plant_dt.db  pyproject.toml  relay.py  scan.py  seesaw.py  setup.sh  setup_influxdb.sh  setup_kafka.sh
docs/: schemas.md
docs/briefs/: README.md  activeContext.md  journal.md  progress.md  projectbrief.md  systemPatterns.md  techStack.md  todo.md
dt/ai/models/: base_model.py
dt/ai/online/: rls.py
dt/ai/registry/: model_metadata.py  model_registry.py  storage.py
dt/collector/: __init__.py  main.py  sensor_manager.py
dt/collector/kinds/: base_sensor.py  camera_sensor.py  dht22_sensor.py  humidity_sensor.py  light_sensor.py  moisture_sensor.py  temperature_sensor.py
dt/collector/mocks/: moisture_sensor_mock.py
dt/communication/: __init__.py  db_client.py  messaging_service.py  mqtt_client.py  topics.py
dt/communication/dataclasses/: __init__.py  action_command.py  alert_event.py  db_id_query.py  db_timestamp_query.py  preprocessing_config.py  sensor.py  sensor_data.py  serializable.py
dt/data/analytics/: rls.py
dt/data/database/: __init__.py  app.py  db_init.sql  storage.py
dt/models/analytics/: rls.py
dt/sensors/: __init__.py  sensor_manager.py
dt/sensors/kinds/: base_sensor.py  camera_sensor.py  humidity_sensor.py  light_sensor.py  moisture_sensor.py  temperature_sensor.py
dt/sensors/mocks/: moisture_sensor_mock.py
dt/utils/: __init__.py  config.py  dataclasses.py  ids.py  logger.py  preprocessing_config.yml
dt/utils/exceptions/: __init__.py  bad_sensor_binding_exception.py
dt/webapp/: app.py
dt/webapp/static/css/: main.css
dt/webapp/static/css/components/: parameter_controls.css  plant_status.css
dt/webapp/static/js/: main.js  store.js
dt/webapp/static/js/components/: parameter_controls.js  plant_status.js  realtime_monitoring.js
dt/webapp/templates/: base.html  dashboard.html  index.html
dt/webapp/templates/components/: parameter_controls.html  plant_status.html  realtime_monitoring.html
notes/: Makefile  README.md  bibliography.bib  config.typ  main.typ  notes.md
notes/draft/: bibliography.bib  main.typ
notes/draft/ulb/: lang.toml
notes/meetings/: meeting4.md  meeting_2.md  meeting_3.md  meeting_4.md  meeting_5.md  meeting_6.md  question.md
notes/presentations/: presentation_06-03-25.typ  text_presentation.md
notes/ulb/: boxs.typ  template.typ  utils.typ
scripts/: kafka_manager.py
scripts/hands-on-scripts/hardware/actuators/: water.py
scripts/hands-on-scripts/hardware/sensors/: dht22.py  seesaw.py
scripts/hands-on-scripts/software/influx/: clean_bucket.sh  query.py  write.py
scripts/hands-on-scripts/software/kafka/: producer.py
scripts/hands-on-scripts/software/spark/: spark_test.py
tests/communication/: test_dataclasses.py
tests/utils/: test_dataclasses.py
